--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@types/react-redux": "^7.1.33",
+    "axios": "^1.6.4",
     "bootstrap": "^5.3.2",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1"
   },
