--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.4",
     "bootstrap": "^5.3.2",
