--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^9.0.4",
+    "react-toastify": "^9.1.3",
     "redux": "^5.0.1"
   },
   "devDependencies": {
