--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^9.0.4",
     "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1"
   },
   "devDependencies": {
