--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.4",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
@@ -34,9 +35,11 @@
     "@typescript-eslint/parser": "^6.17.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
